# rebecca

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  dist-workspace.toml
crates/rebecca/: Cargo.toml
crates/rebecca-cli/: Cargo.toml
crates/rebecca-cli/src/: apps.rs  cache.rs  cache_view.rs  clean.rs  clean_view.rs  cli.rs  history_view.rs  info.rs  main.rs  output.rs  purge.rs  purge_view.rs  scan.rs
crates/rebecca-cli/tests/: cli_api.rs  cli_apps.rs  cli_cache.rs  cli_clean.rs  cli_help.rs  cli_history.rs  cli_output.rs  cli_purge.rs  cli_scan.rs  info.rs  output.rs  scan.rs  support.rs
crates/rebecca-cli/tests/common/: command.rs  isolated.rs  support.rs
crates/rebecca-core/: Cargo.toml
crates/rebecca-core/benches/: perf_matrix.rs  scan_baseline.rs
crates/rebecca-core/safety/: cleanup.toml
crates/rebecca-core/src/: app_leftovers.rs  applications.rs  cache.rs  catalog.rs  cleanup_advice.rs  config.rs  discovery.rs  disk_map.rs  disk_session.rs  environment.rs  error.rs  execution.rs  executor.rs  external_rules.rs  history.rs  inspect.rs  inventory.rs  lib.rs  lint.rs  macos_paths.rs  manifest.rs  model.rs  parallelism.rs  path_overlap.rs  path_template.rs  plan.rs  planner.rs  progress.rs  project_artifacts.rs  protection.rs  safety.rs  safety_catalog.rs  scan.rs  scan_cache.rs  warnings.rs
crates/rebecca-core/src/planner/: app_leftovers.rs  measure.rs  project_artifacts.rs  rules.rs
crates/rebecca-core/src/project_artifacts/: catalog.rs  context.rs  definitions.rs  discovery.rs  policy.rs
crates/rebecca-core/src/protection/: patterns.rs
crates/rebecca-core/src/scan/: backend.rs  portable.rs  progress.rs  windows_native.rs  windows_ntfs_mft.rs
crates/rebecca-core/src/scan_cache/: store.rs
crates/rebecca-core/tests/: cleanup_advice.rs  common.rs  discovery.rs  disk_map.rs  disk_session.rs  executor_contract.rs  history.rs  lint_report.rs  model_contract.rs  path_templates.rs  planner.rs  project_artifacts.rs  recoverable_trash.rs  safety_catalog.rs  safety_policy.rs  scan_engine.rs  space_insight.rs
crates/rebecca-ntfs/: Cargo.toml
crates/rebecca-ntfs/benches/: mft_parser.rs
crates/rebecca-ntfs/fuzz/: .gitignore  Cargo.toml  README.md
crates/rebecca-ntfs/fuzz/fuzz_targets/: attribute_list.rs  i30_index.rs  mft_record.rs  runlist.rs  support.rs
crates/rebecca-ntfs/src/: adapter.rs  attribute_list.rs  attrs.rs  dir_index.rs  fixup.rs  index.rs  lib.rs  parse.rs  reader.rs  record.rs  record_set.rs  runlist.rs  stream.rs  tree.rs
crates/rebecca-ntfs/tests/: mft_parser.rs
crates/rebecca-ntfs/tests/fixtures/: README.md
crates/rebecca-rules/: Cargo.toml  build.rs
crates/rebecca-rules/rules/cleanup/: adobe-reader-cache.toml  android-cache.toml  apt-cache.toml  baidunetdisk-cache.toml  brave-cache.toml  bun-cache.toml  cargo-cache.toml  ccache-cache.toml  chrome-cache.toml  chromium-cache.toml  cocoapods-cache.toml  conda-cache.toml  corepack-cache.toml  dingtalk-cache.toml  directx-shader-cache.toml  discord-cache.toml  dnf-cache.toml  edge-cache.toml  feishu-cache.toml  figma-cache.toml  firefox-profile-cache.toml  go-build-cache.toml  go-module-cache.toml  gradle-cache.toml  homebrew-cache.toml  huggingface-cache.toml  jetbrains-cache.toml  maven-cache.toml  media-player-cache.toml  notion-cache.toml  npm-cache.toml  nuget-cache.toml  pacman-cache.toml  pip-cache.toml  pnpm-cache.toml  poetry-cache.toml  postman-cache.toml  prefetch.toml  pytorch-cache.toml  qq-cache.toml  (+40 more)
crates/rebecca-rules/rules/linux/: user-temp.toml
crates/rebecca-rules/rules/windows/: adobe-reader-cache.toml  android-cache.toml  baidunetdisk-cache.toml  brave-cache.toml  bun-cache.toml  cargo-cache.toml  ccache-cache.toml  chrome-cache.toml  chromium-cache.toml  conda-cache.toml  corepack-cache.toml  dingtalk-cache.toml  directx-shader-cache.toml  discord-cache.toml  edge-cache.toml  feishu-cache.toml  figma-cache.toml  firefox-profile-cache.toml  go-build-cache.toml  go-module-cache.toml  gradle-cache.toml  huggingface-cache.toml  jetbrains-cache.toml  maven-cache.toml  media-player-cache.toml  notion-cache.toml  npm-cache.toml  nuget-cache.toml  pip-cache.toml  pnpm-cache.toml  poetry-cache.toml  postman-cache.toml  prefetch.toml  pytorch-cache.toml  qq-cache.toml  qqmusic-cache.toml  rustup-cache.toml  sccache-cache.toml  slack-cache.toml  steam-cache.toml  (+33 more)
crates/rebecca-rules/safety/: cleanup.toml  windows.toml
crates/rebecca-rules/src/: lib.rs
crates/rebecca-safety/: Cargo.toml
crates/rebecca-safety/safety/: cleanup.toml
crates/rebecca-safety/src/: lib.rs
crates/rebecca-windows/: Cargo.toml
crates/rebecca-windows/src/: apps.rs  lib.rs  ntfs_scan.rs  process.rs  recycle_bin.rs  steam.rs  usn_cache.rs
crates/rebecca-windows/tests/: apps_inventory.rs  recycle_bin.rs  usn_cache.rs  windows_capabilities.rs
crates/rebecca/skills/rebecca-disk-cleaner/: SKILL.md
crates/rebecca/src/: apps.rs  cache.rs  cache_view.rs  capabilities.rs  catalog.rs  clean.rs  clean_view.rs  cleanup_receipt.rs  cli.rs  config_cmd.rs  history_view.rs  info.rs  inspect.rs  lib.rs  main.rs  output.rs  progress.rs  purge.rs  purge_view.rs  render.rs  rules_cmd.rs  runtime.rs  saved_plan.rs  scan.rs  schema.rs  skills.rs  text.rs  trash.rs  trash_backend.rs  workbench.rs  workflow_artifacts.rs  workflow_execution.rs  workflow_planner.rs
crates/rebecca/src/render/: clean.rs  inspect.rs  purge.rs
crates/rebecca/src/tui/: app.rs  basket.rs  effect.rs  frame_projection.rs  hit_test.rs  input.rs  layout.rs  mod.rs  model.rs  navigation.rs  preferences.rs  presentation.rs  progress.rs  projection.rs  replay.rs  snapshot.rs  task.rs  task_outcome.rs  task_progress.rs  task_worker.rs  terminal.rs  treemap.rs  view.rs
crates/rebecca/tests/: cli_api.rs  cli_apps.rs  cli_cache.rs  cli_catalog.rs  cli_clean.rs  cli_completion.rs  cli_help.rs  cli_history.rs  cli_inspect.rs  cli_output.rs  cli_plan.rs  cli_purge.rs  cli_receipt.rs  cli_scan.rs  cli_skills.rs  cli_trash.rs  cli_tui.rs  info.rs  output.rs  scan.rs
(+197 files in other folders)
