[workspace]
resolver = "3"
members = [
    "crates/rebecca-cli",
    "crates/rebecca-core",
    "crates/rebecca-rules",
    "crates/rebecca-windows",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rebecca contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/rebecca"
homepage = "https://github.com/Latias94/rebecca"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "color"] }
clap_complete = "4.6.5"
criterion = "0.5"
dialoguer = "0.11"
ctrlc = "3.4"
directories = "6.0"
globset = "0.4"
ignore = "0.4"
indicatif = "0.17"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
trash = "5.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
winreg = "0.52"

# Workspace crates. Keeping versions explicit lets cargo publish rewrite path
# dependencies to registry dependencies without duplicating requirements.
rebecca-core = { path = "crates/rebecca-core", version = "0.1.0" }
rebecca-rules = { path = "crates/rebecca-rules", version = "0.1.0" }
rebecca-windows = { path = "crates/rebecca-windows", version = "0.1.0" }
