[workspace]
resolver = "3"
members = [
    "crates/rebecca",
    "crates/rebecca-core",
    "crates/rebecca-rules",
    "crates/rebecca-windows",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Rebecca contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/rebecca"
homepage = "https://github.com/Latias94/rebecca"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4.5", features = ["derive", "env", "color"] }
clap_complete = "4.6.6"
criterion = "0.7"
dialoguer = "0.12"
ctrlc = "3.4"
directories = "6.0"
globset = "0.4"
ignore = "0.4"
indicatif = "0.18.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
trash = "5.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
winreg = "0.56.0"

# Workspace crates. Keeping versions explicit lets cargo publish rewrite path
# dependencies to registry dependencies without duplicating requirements.
rebecca-core = { path = "crates/rebecca-core", version = "0.2.0" }
rebecca-rules = { path = "crates/rebecca-rules", version = "0.2.0" }
rebecca-windows = { path = "crates/rebecca-windows", version = "0.2.0" }

[profile.dist]
inherits = "release"
lto = "thin"
