[workspace]
resolver = "3"
members = [
    "crates/rebecca",
    "crates/rebecca-core",
    "crates/rebecca-ntfs",
    "crates/rebecca-rules",
    "crates/rebecca-safety",
    "crates/rebecca-windows",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Rebecca contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/rebecca"
homepage = "https://github.com/Latias94/rebecca"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env", "color"] }
clap_complete = "4.6.6"
criterion = "0.8.2"
crossterm = "0.29.0"
dialoguer = "0.12"
ctrlc = "3.5.2"
directories = "6.0"
globset = "0.4.18"
ignore = "0.4.26"
indicatif = "0.18.5"
rayon = "1.12.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
trash = "5.2.6"
unicode-width = "0.2.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
winreg = "0.56.0"

# Workspace crates. Keeping versions explicit lets cargo publish rewrite path
# dependencies to registry dependencies without duplicating requirements.
rebecca-core = { path = "crates/rebecca-core", version = "=0.3.0" }
rebecca-ntfs = { path = "crates/rebecca-ntfs", version = "=0.3.0" }
rebecca-rules = { path = "crates/rebecca-rules", version = "=0.3.0" }
rebecca-safety = { path = "crates/rebecca-safety", version = "=0.3.0" }
rebecca-windows = { path = "crates/rebecca-windows", version = "=0.3.0" }

[profile.dist]
inherits = "release"
lto = "thin"
