[package]
name = "rebecca-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "rebecca"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
ctrlc.workspace = true
rebecca-core = { path = "../rebecca-core" }
rebecca-rules = { path = "../rebecca-rules" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
rebecca-windows = { path = "../rebecca-windows" }
