[package]
name = "rebecca-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Windows-first cleanup CLI for caches, app leftovers, and project artifacts."
documentation = "https://docs.rs/rebecca-cli"
readme = "../../README.md"
keywords = ["windows", "cleanup", "cache", "cli"]
categories = ["command-line-utilities", "filesystem"]

[package.metadata.dist]
dist = true

[[bin]]
name = "rebecca"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
ctrlc.workspace = true
rebecca-core.workspace = true
rebecca-rules.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
rebecca-windows.workspace = true
