[package]
name = "rebecca-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
directories.workspace = true
globset.workspace = true
ignore.workspace = true
jwalk.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
rebecca-rules = { path = "../rebecca-rules" }
tempfile.workspace = true
