[package]
name = "rebecca-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core planning, safety, scanning, and history models for Rebecca."
documentation = "https://docs.rs/rebecca-core"
readme = "../../README.md"
keywords = ["windows", "cleanup", "cache", "safety"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
directories.workspace = true
globset.workspace = true
ignore.workspace = true
rayon.workspace = true
rebecca-ntfs.workspace = true
rebecca-safety.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
trash.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
criterion.workspace = true
rebecca-rules.workspace = true
tempfile.workspace = true

[[bench]]
name = "scan_baseline"
harness = false

[[bench]]
name = "perf_matrix"
harness = false
