[package]
name = "rebecca-rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Owned Windows cleanup rule catalog for Rebecca."
documentation = "https://docs.rs/rebecca-rules"
readme = "../../README.md"
keywords = ["windows", "cleanup", "cache", "rules"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
rebecca-core.workspace = true
serde.workspace = true
toml.workspace = true
