[package]
name = "rebecca-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Windows-specific adapters for Rebecca discovery and host capabilities."
documentation = "https://docs.rs/rebecca-windows"
readme = "../../README.md"
keywords = ["windows", "cleanup", "registry", "steam"]
categories = ["filesystem", "os::windows-apis"]

[dependencies]
rebecca-core.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
winreg.workspace = true

[dev-dependencies]
tempfile.workspace = true
