[package]
name = "rebecca"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Windows-first cleanup CLI and Rust library surface for Rebecca cleanup planning, rules, and platform adapters."
documentation = "https://docs.rs/rebecca"
readme = "../../README.md"
keywords = ["windows", "cleanup", "cache", "cli"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["rules", "windows"]
rules = ["dep:rebecca-rules"]
windows = ["dep:rebecca-windows"]

[package.metadata.dist]
dist = true

[[bin]]
name = "rebecca"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
ctrlc.workspace = true
rebecca-core.workspace = true
rebecca-rules = { workspace = true, optional = true }
rebecca-windows = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
jsonschema = { version = "0.46.6", default-features = false }
tempfile.workspace = true
